# 2d-gaussian-splatting

./: pyproject.toml
wrappers/diff_surfel_rasterization/: .gitignore  pyproject.toml  setup.py
wrappers/diff_surfel_rasterization/src/: sitecustomize.py
wrappers/simple_knn/: pyproject.toml  setup.py
wrappers/simple_knn/src/simple_knn/: __init__.py
